updating features doc

--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -251,6 +251,43 @@
     "\n",
     "mode(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Length of list: 12\n"
+    },
+    {
+     "data": {
+      "text/plain": "[50.58830560690089,\n 45.95464879852127,\n 11.463966112138015,\n 11.395206407886649,\n 34.503014787430644,\n -26.386958102279703,\n 2.2289439309919934,\n -1.1751417128773933,\n -10.519796056685163,\n 0.672508934072705,\n -10.168390634627231,\n -2.0421059765865706]"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def avg_timbre(vals):\n",
+    "    \"\"\"finds average timbre for a song\"\"\"\n",
+    "    vals_list = []\n",
+    "    for i in range(len(vals)):\n",
+    "        val = vals[i]['timbre']\n",
+    "        vals_list.append(val)\n",
+    "        # print(len(val), val) # Debugging line\n",
+    "\n",
+    "    # Averaging values\n",
+    "    averages_list = [sum(item) / len(item) for item in zip(*vals_list)]\n",
+    "    print(f'Length of list: {len(averages_list)}')\n",
+    "    return averages_list\n",
+    "\n",
+    "vals = audio_analysis['segments']\n",
+    "avg_timbre(vals)"
+   ]
   }
  ],
  "metadata": {
