updating feature doc

--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -210,51 +210,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'D'"
+      "text/plain": "'A'"
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def key(key_val):\n",
+    "    \"\"\"Finds the key of the song (via the mode (stat) of the song)\"\"\"\n",
     "    key_dict = {0:'C', 1:'C#/Db', 2:'D', 3:'D#/Eb', 4:'E', 5:'F', 6:'F#/Gb', 7:'G', 8:'G#/Ab', 9:'A', 10:'A#/Bb', 11:'B'}\n",
-    "    return key_dict[key_val]\n",
+    "    key_list = []\n",
     "\n",
-    "key(2)"
+    "    for i in range(len(key_val)):\n",
+    "        key = key_val[i]['key']\n",
+    "        key_list.append(key)\n",
+    "\n",
+    "    # print(key_list) # Debugging line\n",
+    "    key_mode = int(round(sum(key_list) / len(key_val)))\n",
+    "    return key_dict[key_mode]\n",
+    "\n",
+    "key_val = audio_analysis['sections']\n",
+    "key(key_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'no result'"
+      "text/plain": "'major'"
      },
-     "execution_count": 22,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def mode(mode_val):\n",
-    "    mode_dict = {-1:'minor', 0:'major', 1:'no result'}\n",
-    "    return mode_dict[mode_val]\n",
+    "    \"\"\"Finds the mode (stat) of the mode (musical) for the song\"\"\"\n",
+    "    mode_dict = {-1:'no result', 0:'minor', 1:'major'}\n",
+    "    mode_list = []\n",
     "\n",
-    "mode(1)"
+    "    for i in range(len(mode_val)):\n",
+    "        mode = mode_val[i]['mode']\n",
+    "        mode_list.append(mode)\n",
+    "    \n",
+    "    mode_mode = int(round(sum(mode_list) / len(mode_val)))\n",
+    "    return mode_dict[mode_mode]\n",
+    "\n",
+    "mode_val = audio_analysis['sections']\n",
+    "mode(mode_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -266,17 +285,17 @@
      "data": {
       "text/plain": "[50.58830560690089,\n 45.95464879852127,\n 11.463966112138015,\n 11.395206407886649,\n 34.503014787430644,\n -26.386958102279703,\n 2.2289439309919934,\n -1.1751417128773933,\n -10.519796056685163,\n 0.672508934072705,\n -10.168390634627231,\n -2.0421059765865706]"
      },
-     "execution_count": 41,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def avg_timbre(vals):\n",
+    "def avg_timbre(timbre_val):\n",
     "    \"\"\"finds average timbre for a song\"\"\"\n",
     "    vals_list = []\n",
-    "    for i in range(len(vals)):\n",
-    "        val = vals[i]['timbre']\n",
+    "    for i in range(len(timbre_val)):\n",
+    "        val = timbre_val[i]['timbre']\n",
     "        vals_list.append(val)\n",
     "        # print(len(val), val) # Debugging line\n",
     "\n",
@@ -288,6 +307,45 @@
     "vals = audio_analysis['segments']\n",
     "avg_timbre(vals)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'4/4'"
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def time_signature(time_sig_val):\n",
+    "    \"\"\" Finds the time signature of the song \"\"\"\n",
+    "    time_sig_dict = {3:'3/4', 4:'4/4', 5:'5/4', 6:'6/4', 7:'7/4'}\n",
+    "    time_sig_list = []\n",
+    "\n",
+    "    for i in range(len(time_sig_val)):\n",
+    "        time_sig = time_sig_val[i]['time_signature']\n",
+    "        time_sig_list.append(time_sig)\n",
+    "\n",
+    "    # print(time_sig_list) # Debugging line\n",
+    "    time_sig_mode = int(round(sum(time_sig_list) / len(time_sig_val)))\n",
+    "    return time_sig_dict[time_sig_mode]\n",
+    "\n",
+    "time_sig_val = audio_analysis['sections']\n",
+    "time_signature(time_sig_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
