updating features doc

--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -19,7 +19,6 @@
     "import json\n",
     "import time\n",
     "\n",
-    "# #################################################\n",
     "#   Spotify API user credentials, generate token\n",
     "CLIENT_ID = \"09cdac09aca04b7093270e33247e1aea\"\n",
     "CLIENT_SECRET = \"243a42f4fb044d34b048a19ea97d5702\"\n",
@@ -30,34 +29,25 @@
     "token = credentials.get_access_token(as_dict=False)\n",
     "spotify = spotipy.Spotify(auth=token)\n",
     "spotify.trace = False\n",
-    "# #################################################\n",
     "\n",
-    "# #################################################\n",
     "#   Genius API settings and user credentials\n",
     "genius_api = genius.Genius(\"T-bfzytjCOguYO2L9hG7_tX0-b_p6BJG1pxJClgTS_37EEo3kkbmfbo3YRhnZ94o\")\n",
     "genius.verbose = True                         # Keep status messages on\n",
     "genius.remove_section_headers = False         # Remove section headers (e.g. [Chorus]) from lyrics when searching\n",
     "genius.excluded_terms = [\"(Remix)\", \"(Live)\"] # Exclude songs with these words in their title\n",
-    "# #################################################\n",
     "\n",
     "start = time.time()\n",
     "\n",
-    "# #################################################\n",
-    "#      Initial user query for a track name\n",
-    "# #################################################\n",
+    "# Initial user query for a track name\n",
     "results = spotify.search(\"Thriller\", type=\"track\", limit=1)\n",
     "\n",
     "if len(results['tracks']['items']) > 0:\n",
     "    track = results['tracks']['items'][0]\n",
     "    audio_features = spotify.audio_features(str(track['uri']))[0]\n",
-    "    # #################################################\n",
-    "    # Comment out audio_analysis for now, because it is ridiculously complex\n",
     "    audio_analysis = spotify.audio_analysis(str(track['uri']))\n",
-    "    # #################################################\n",
     "    primary_artist = spotify.artist(str(track['album']['artists'][0]['uri']))\n",
-    "    # #################################################\n",
+    "\n",
     "    # Features from initial spotify.search API call\n",
-    "    # #################################################\n",
     "    track_name = str(track['name'])\n",
     "    print('track                  : ' + track_name)\n",
     "    artist_name = str(track['artists'][0]['name'])\n",
@@ -72,9 +62,8 @@
     "    print('explicit (true/false)  : ' + str(track['explicit']))\n",
     "    print('audio preview          : ' + track['preview_url'])\n",
     "    print('cover art 300x300 JFIF : ' + track['album']['images'][1]['url'])\n",
-    "    # #################################################\n",
+    "\n",
     "    # Features from spotify.audio_features API call\n",
-    "    # #################################################\n",
     "    print('danceability           : ' + str(audio_features['danceability']))\n",
     "    print('energy                 : ' + str(audio_features['energy']))\n",
     "    print('key                    : ' + str(audio_features['key']))\n",
@@ -87,17 +76,15 @@
     "    print('valence                : ' + str(audio_features['valence']))\n",
     "    print('tempo                  : ' + str(audio_features['tempo']))\n",
     "    print('time signature         : ' + str(audio_features['time_signature']))\n",
-    "    # #################################################\n",
+    "\n",
     "    # Features from spotify.artist API call\n",
-    "    # #################################################\n",
     "    print('num artist followers   : ' + str(primary_artist['followers']['total']))\n",
     "    print('artist genres          : ' + str(primary_artist['genres']))\n",
     "    print('artist popularity      : ' + str(primary_artist['popularity']))\n",
     "    print('artist spotify avatar  : ' + str(primary_artist['images'][1]['url']))\n",
     "    print('artist spotify link    : ' + str(primary_artist['external_urls']['spotify']))\n",
-    "    # #################################################\n",
+    "\n",
     "    # Search for song lyrics via Genius API\n",
-    "    # #################################################\n",
     "    song = genius_api.search_song(track_name, artist_name)\n",
     "    if song is None:\n",
     "      delta = time.time() - start\n",
@@ -184,46 +171,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'00:05:45'"
+      "text/plain": "355.60408"
      },
-     "execution_count": 19,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def time(time_val):\n",
+    "time_val = audio_features['duration_ms']/1000\n",
+    "time_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'00:05:58'"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def time(time_val=audio_features['duration_ms']/1000):\n",
     "    \"\"\" Converts float to time format \"\"\"\n",
     "    seconds = time_val\n",
     "    minutes, seconds = divmod(seconds, 60)\n",
     "    hours, minutes = divmod(minutes, 60)\n",
     "\n",
     "    return \"%02d:%02d:%02d\"%(hours,minutes,seconds)\n",
-    "\n",
-    "time(345.17109)"
+    "    \n",
+    "time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "'A'"
      },
-     "execution_count": 79,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def key(key_val):\n",
+    "def key(key_val=audio_analysis['sections']):\n",
     "    \"\"\"Finds the key of the song (via the mode (stat) of the song)\"\"\"\n",
     "    key_dict = {0:'C', 1:'C#/Db', 2:'D', 3:'D#/Eb', 4:'E', 5:'F', 6:'F#/Gb', 7:'G', 8:'G#/Ab', 9:'A', 10:'A#/Bb', 11:'B'}\n",
     "    key_list = []\n",
@@ -236,62 +242,66 @@
     "    key_mode = int(round(sum(key_list) / len(key_val)))\n",
     "    return key_dict[key_mode]\n",
     "\n",
-    "key_val = audio_analysis['sections']\n",
-    "key(key_val)"
+    "key()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "'major'"
      },
-     "execution_count": 72,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def mode(mode_val):\n",
+    "def song_mode(mode_val=audio_analysis['sections']):\n",
     "    \"\"\"Finds the mode (stat) of the mode (musical) for the song\"\"\"\n",
     "    mode_dict = {-1:'no result', 0:'minor', 1:'major'}\n",
     "    mode_list = []\n",
+    "    mode_conf_list = []\n",
     "\n",
     "    for i in range(len(mode_val)):\n",
     "        mode = mode_val[i]['mode']\n",
     "        mode_list.append(mode)\n",
+    "\n",
+    "    # Considering how to incorporate mode confidence\n",
+    "    # for i in range(len(mode_val)):\n",
+    "    #     mode_conf = mode_val[i]['mode_confidence']\n",
+    "    #     mode_conf_list.append(mode_conf)\n",
     "    \n",
     "    mode_mode = int(round(sum(mode_list) / len(mode_val)))\n",
     "    return mode_dict[mode_mode]\n",
     "\n",
-    "mode_val = audio_analysis['sections']\n",
-    "mode(mode_val)"
+    "song_mode()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Length of list: 12\n"
+     "text": "Length of list: 12\n[50.58830560690089, 45.95464879852127, 11.463966112138015, 11.395206407886649, 34.503014787430644, -26.386958102279703, 2.2289439309919934, -1.1751417128773933, -10.519796056685163, 0.672508934072705, -10.168390634627231, -2.0421059765865706]\n"
     },
     {
      "data": {
-      "text/plain": "[50.58830560690089,\n 45.95464879852127,\n 11.463966112138015,\n 11.395206407886649,\n 34.503014787430644,\n -26.386958102279703,\n 2.2289439309919934,\n -1.1751417128773933,\n -10.519796056685163,\n 0.672508934072705,\n -10.168390634627231,\n -2.0421059765865706]"
+      "text/plain": "106.51420209488612"
      },
-     "execution_count": 81,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def avg_timbre(timbre_val):\n",
+    "def avg_timbre(timbre_val=audio_analysis['segments']):\n",
     "    \"\"\"finds average timbre for a song\"\"\"\n",
     "    vals_list = []\n",
     "    for i in range(len(timbre_val)):\n",
@@ -302,29 +312,29 @@
     "    # Averaging values\n",
     "    averages_list = [sum(item) / len(item) for item in zip(*vals_list)]\n",
     "    print(f'Length of list: {len(averages_list)}')\n",
-    "    return averages_list\n",
+    "    print(averages_list)\n",
+    "    return sum(averages_list)\n",
     "\n",
-    "vals = audio_analysis['segments']\n",
-    "avg_timbre(vals)"
+    "avg_timbre()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "'4/4'"
      },
-     "execution_count": 90,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def time_signature(time_sig_val):\n",
-    "    \"\"\" Finds the time signature of the song \"\"\"\n",
+    "def time_signature(time_sig_val=audio_analysis['sections']):\n",
+    "    \"\"\" Finds the time signature of the song via mode(stat)\"\"\"\n",
     "    time_sig_dict = {3:'3/4', 4:'4/4', 5:'5/4', 6:'6/4', 7:'7/4'}\n",
     "    time_sig_list = []\n",
     "\n",
@@ -336,8 +346,7 @@
     "    time_sig_mode = int(round(sum(time_sig_list) / len(time_sig_val)))\n",
     "    return time_sig_dict[time_sig_mode]\n",
     "\n",
-    "time_sig_val = audio_analysis['sections']\n",
-    "time_signature(time_sig_val)"
+    "time_signature()"
    ]
   },
   {
