--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "track                  : You Were a Saint\nartist(s)              : L'Anarchiste\ntrack id               : 5lrbemzIFEyHj7QTYKKdcU\nsong spotify link      : https://open.spotify.com/track/5lrbemzIFEyHj7QTYKKdcU\nartist id              : 37ArqRBcGcIj8LAjK0kFQn\nrelease date           : 2015-07-14\nrelease date precision : day\nduration (ms)          : 234754\npopularity             : 8\nexplicit (true/false)  : False\ncover art 300x300 JFIF : https://i.scdn.co/image/ab67616d00001e02af0f4be046b7232b1f3eb9bb\ndanceability           : 0.609\nenergy                 : 0.531\nkey                    : 6\nloudness               : -10.211\nmode                   : 1\nspeechiness            : 0.0358\nacousticness           : 0.389\ninstrumentalness       : 0.112\nliveness               : 0.119\nvalence                : 0.16\ntempo                  : 89.98\ntime signature         : 4\nnum artist followers   : 1114\nartist genres          : ['slc indie']\nartist popularity      : 10\nartist spotify avatar  : https://i.scdn.co/image/ab67616d00001e02af0f4be046b7232b1f3eb9bb\nartist spotify link    : https://open.spotify.com/artist/37ArqRBcGcIj8LAjK0kFQn\nSearching for \"You Were a Saint\" by L'Anarchiste...\nDone.\nLyrics found. All features retrieved in 4.57 seconds\n\n"
+     "text": "track                  : Creep\nartist(s)              : Radiohead\ntrack id               : 6b2oQwSGFkzsMtQruIWm2p\nsong spotify link      : https://open.spotify.com/track/6b2oQwSGFkzsMtQruIWm2p\nartist id              : 4Z8W4fKeB5YxbusRsdQVPb\nrelease date           : 1993-02-22\nrelease date precision : day\nduration (ms)          : 238640\npopularity             : 81\nexplicit (true/false)  : True\ncover art 300x300 JFIF : https://i.scdn.co/image/ab67616d00001e022f85b65d3ac4d3d7f806ca11\ndanceability           : 0.515\nenergy                 : 0.43\nkey                    : 7\nloudness               : -9.935\nmode                   : 1\nspeechiness            : 0.0369\nacousticness           : 0.0102\ninstrumentalness       : 0.000141\nliveness               : 0.129\nvalence                : 0.104\ntempo                  : 91.841\ntime signature         : 4\nnum artist followers   : 4951275\nartist genres          : ['alternative rock', 'art rock', 'melancholia', 'oxford indie', 'permanent wave', 'rock']\nartist popularity      : 82\nartist spotify avatar  : https://i.scdn.co/image/563754af10b3d9f9f62a3458e699f58c4a02870f\nartist spotify link    : https://open.spotify.com/artist/4Z8W4fKeB5YxbusRsdQVPb\nSearching for \"Creep\" by Radiohead...\nDone.\nLyrics found. All features retrieved in 2.39 seconds\n\n[Verse 1]\nWhen you were here before\nCouldn't look you in the eye\nYou're just like an angel\nYour skin makes me cry\nYou float like a feather\nIn a beautiful world\nI wish I was special\nYou're so fuckin' special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Verse 2]\nI don't care if it hurts\nI wanna have control\nI want a perfect body\nI want a perfect soul\nI want you to notice\nWhen I'm not around\nYou're so fuckin' special\nI wish I was special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Bridge]\nShe's running out the door\nShe's running out\nShe run, run, run, run\nRun\n\n[Outro]\nWhatever makes you happy\nWhatever you want\nYou're so fuckin' special\nI wish I was special\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\nI don't belong here \n\nSentiment Score (baseline):          {'neg': 0.157, 'neu': 0.591, 'pos': 0.253, 'compound': 0.9187}\nSentiment Score (simple processing): {'neg': 0.196, 'neu': 0.435, 'pos': 0.369, 'compound': 0.9563}\nSentiment Score (stemming):          {'neg': 0.179, 'neu': 0.496, 'pos': 0.325, 'compound': 0.9244}\nSentiment Score (lemmatization):     {'neg': 0.244, 'neu': 0.307, 'pos': 0.449, 'compound': 0.9517}\n"
     }
    ],
    "source": [
@@ -41,7 +41,7 @@
     "start = time.time()\n",
     "\n",
     "# Initial user query for a track name\n",
-    "results = spotify.search(q=\"you were a saint\", type='track', limit=1, offset=1)\n",
+    "results = spotify.search(q=\"creep\", type='track', limit=1, offset=0)\n",
     "\n",
     "if len(results['tracks']['items']) > 0:\n",
     "    track = results['tracks']['items'][0]\n",
@@ -96,41 +96,202 @@
     "    else:\n",
     "      lyrics = song.lyrics\n",
     "      delta = time.time() - start\n",
-    "      print(\"Lyrics found. All features retrieved in %.2f seconds\" % (delta,))\n",
-    "      print()\n",
+    "      print(\"Lyrics found. All features retrieved in %.2f seconds\\n\" % (delta,))\n",
+    "      print(lyrics, '\\n')\n",
+    "      \n",
+    "      # We need to choose which value is the best here!\n",
+    "      baseline = sid.polarity_scores(lyrics)\n",
+    "      print(f'Sentiment Score (baseline):          {baseline}')\n",
+    "      tokenization = processed_score()\n",
+    "      print(f'Sentiment Score (simple processing): {tokenization}')\n",
+    "      stem_score = stemmed_score()\n",
+    "      print(f'Sentiment Score (stemming):          {stem_score}')\n",
+    "      lem_score = lemma_score()\n",
+    "      print(f'Sentiment Score (lemmatization):     {lem_score}')\n",
+    "      \n",
     "else:\n",
     "    print('Track not found')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "I never thought you were a saint\nI just wanted you to be the one\nI always figure you would stay\nBut now you’re gone\nYou’re gone\n\nSo burn away my time\nI want your hand in mine\nIt hurt to see you go\n'cause I was in love with you\n\nI’m caught here balanced on a wire\nBound between your heart and mine\nI should have given so much more\nInstead I watched you walk away\n\nIn my mind\nThere you are\nWith me\nIn your arms\nI feel so alive\nWhen you're mine\nBut here we are\nYou’re gone\nOn your own\nI’m here\nAll alone\nI just could not speak\nA word\nSo within my mind\nHere you are\nWith me\nIn your arms\nI feel so alive\n"
-    }
-   ],
    "source": [
-    "print(lyrics)"
+    "# Lyric Sentiment Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
-     "text": "meta\ntrack\nbars\nbeats\ntatums\nsections\nsegments\n"
+     "text": "[nltk_data] Downloading package vader_lexicon to\n[nltk_data]     C:\\Users\\Rob\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package vader_lexicon is already up-to-date!\n[nltk_data] Downloading package punkt to\n[nltk_data]     C:\\Users\\Rob\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package punkt is already up-to-date!\n"
     }
    ],
    "source": [
-    "for key, value in audio_analysis.items() :\n",
-    "    print (key)"
+    "import nltk\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "nltk.download('vader_lexicon')\n",
+    "nltk.download('punkt')\n",
+    "sid = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "import en_core_web_md\n",
+    "nlp = en_core_web_md.load()\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
+    "STOP_WORDS = nlp.Defaults.stop_words\n",
+    "\n",
+    "import pandas as pd \n",
+    "from nltk.stem import PorterStemmer\n",
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'neg': 0.041, 'neu': 0.842, 'pos': 0.117, 'compound': 0.8759}"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = sid.polarity_scores(lyrics)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenizing, stemming, and lemmatization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processed_score(data=lyrics):\n",
+    "    tokens = []\n",
+    "    df = pd.DataFrame(data.split(), columns=['words'])\n",
+    "\n",
+    "    for doc in tokenizer.pipe(df['words']):\n",
+    "        doc_tokens = []\n",
+    "        for token in doc:\n",
+    "            if (token.is_stop == False) & (token.is_punct == False):\n",
+    "                doc_tokens.append(token.text.lower())\n",
+    "        tokens.append(doc_tokens)\n",
+    "\n",
+    "    df['tokens'] = tokens\n",
+    "    word_list = sum(list([item for item in df['tokens'] if len(item) != 0]), [])\n",
+    "    lyrics_processed = ' '.join(word_list)\n",
+    "    scores = sid.polarity_scores(lyrics_processed)\n",
+    "\n",
+    "    return scores\n",
+    "\n",
+    "def stemmed_score(data=lyrics):\n",
+    "    \"\"\" Processes the text via spacy \"\"\"\n",
+    "    tokens = []\n",
+    "    words = []\n",
+    "\n",
+    "    # Stemming\n",
+    "    for word in data.split():\n",
+    "        words.append(ps.stem(word))\n",
+    "\n",
+    "    df = pd.DataFrame(words, columns=['words'])\n",
+    "\n",
+    "    for doc in tokenizer.pipe(df['words']):\n",
+    "        doc_tokens = []\n",
+    "        for token in doc:\n",
+    "            if (token.is_stop == False) & (token.is_punct == False):\n",
+    "                doc_tokens.append(token.text.lower())\n",
+    "        tokens.append(doc_tokens)\n",
+    "\n",
+    "    df['tokens'] = tokens\n",
+    "    word_list = sum(list([item for item in df['tokens'] if len(item) != 0]), [])\n",
+    "    lyrics_processed = ' '.join(word_list)\n",
+    "    scores = sid.polarity_scores(lyrics_processed)\n",
+    "\n",
+    "    return scores\n",
+    "\n",
+    "def get_lemmas(data):\n",
+    "    \"\"\" Gets lemmas for text \"\"\"\n",
+    "    lemmas = []\n",
+    "    doc = nlp(data)\n",
+    "    \n",
+    "    for token in doc: \n",
+    "        if ((token.is_stop == False) and (token.is_punct == False)) and (token.pos_!= 'PRON'):\n",
+    "            lemmas.append(token.lemma_)\n",
+    "    \n",
+    "    return lemmas\n",
+    "\n",
+    "def lemma_score(data=lyrics):\n",
+    "    \"\"\" Processes the text via spacy \"\"\"\n",
+    "    tokens = []\n",
+    "    words = []\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    words = get_lemmas(lyrics)\n",
+    "\n",
+    "    df = pd.DataFrame(words, columns=['words'])\n",
+    "\n",
+    "    for doc in tokenizer.pipe(df['words']):\n",
+    "        doc_tokens = []\n",
+    "        for token in doc:\n",
+    "            if (token.is_stop == False) & (token.is_punct == False):\n",
+    "                doc_tokens.append(token.text.lower())\n",
+    "        tokens.append(doc_tokens)\n",
+    "\n",
+    "    df['tokens'] = tokens\n",
+    "    word_list = sum(list([item for item in df['tokens'] if len(item) != 0]), [])\n",
+    "    lyrics_processed = ' '.join(word_list)\n",
+    "    scores = sid.polarity_scores(lyrics_processed)\n",
+    "\n",
+    "    return scores\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'neg': 0.196, 'neu': 0.435, 'pos': 0.369, 'compound': 0.9563},\n {'neg': 0.179, 'neu': 0.496, 'pos': 0.325, 'compound': 0.9244},\n {'neg': 0.244, 'neu': 0.307, 'pos': 0.449, 'compound': 0.9517})"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_score(), stemmed_score(), lemma_score()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Audio features"
    ]
   },
   {
@@ -534,47 +695,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ParserError",
-     "evalue": "Error tokenizing data. C error: Expected 4 fields in line 14735, saw 5\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mParserError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-b0f6514415e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'spotify_dataset.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\data-science-D_g8A8uX\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    674\u001b[0m         )\n\u001b[0;32m    675\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 676\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    677\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\data-science-D_g8A8uX\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    452\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    453\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 454\u001b[1;33m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    455\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m         \u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\data-science-D_g8A8uX\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1131\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1132\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nrows\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1133\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1134\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1135\u001b[0m         \u001b[1;31m# May alter columns / col_dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\data-science-D_g8A8uX\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   2035\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2036\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2037\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2038\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2039\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 4 fields in line 14735, saw 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('spotify_dataset.csv')\n",
-    "df.head()"
-   ]
   }
  ],
  "metadata": {
