--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -22,8 +22,8 @@
     "\n",
     "\n",
     "#   Spotify API user credentials, generate token\n",
-    "CLIENT_ID = \"09cdac09aca04b7093270e33247e1aea\"\n",
-    "CLIENT_SECRET = \"243a42f4fb044d34b048a19ea97d5702\"\n",
+    "CLIENT_ID = \"",
+    "CLIENT_SECRET = \"n",
     "credentials = SpotifyClientCredentials(\n",
     "        client_id=CLIENT_ID,\n",
     "        client_secret=CLIENT_SECRET)\n",
