updating feature extraction notebook

--- a/feature_extraction_rob.ipynb
+++ b/feature_extraction_rob.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "track                  : Creep\nartist(s)              : Radiohead\ntrack id               : 6b2oQwSGFkzsMtQruIWm2p\nsong spotify link      : https://open.spotify.com/track/6b2oQwSGFkzsMtQruIWm2p\nartist id              : 4Z8W4fKeB5YxbusRsdQVPb\nrelease date           : 1993-02-22\nrelease date precision : day\nduration (ms)          : 238640\npopularity             : 81\nexplicit (true/false)  : True\ncover art 300x300 JFIF : https://i.scdn.co/image/ab67616d00001e022f85b65d3ac4d3d7f806ca11\ndanceability           : 0.515\nenergy                 : 0.43\nkey                    : 7\nloudness               : -9.935\nmode                   : 1\nspeechiness            : 0.0369\nacousticness           : 0.0102\ninstrumentalness       : 0.000141\nliveness               : 0.129\nvalence                : 0.104\ntempo                  : 91.841\ntime signature         : 4\nnum artist followers   : 4951275\nartist genres          : ['alternative rock', 'art rock', 'melancholia', 'oxford indie', 'permanent wave', 'rock']\nartist popularity      : 82\nartist spotify avatar  : https://i.scdn.co/image/563754af10b3d9f9f62a3458e699f58c4a02870f\nartist spotify link    : https://open.spotify.com/artist/4Z8W4fKeB5YxbusRsdQVPb\nSearching for \"Creep\" by Radiohead...\nDone.\nLyrics found. All features retrieved in 2.39 seconds\n\n[Verse 1]\nWhen you were here before\nCouldn't look you in the eye\nYou're just like an angel\nYour skin makes me cry\nYou float like a feather\nIn a beautiful world\nI wish I was special\nYou're so fuckin' special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Verse 2]\nI don't care if it hurts\nI wanna have control\nI want a perfect body\nI want a perfect soul\nI want you to notice\nWhen I'm not around\nYou're so fuckin' special\nI wish I was special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Bridge]\nShe's running out the door\nShe's running out\nShe run, run, run, run\nRun\n\n[Outro]\nWhatever makes you happy\nWhatever you want\nYou're so fuckin' special\nI wish I was special\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\nI don't belong here \n\nSentiment Score (baseline):          {'neg': 0.157, 'neu': 0.591, 'pos': 0.253, 'compound': 0.9187}\nSentiment Score (simple processing): {'neg': 0.196, 'neu': 0.435, 'pos': 0.369, 'compound': 0.9563}\nSentiment Score (stemming):          {'neg': 0.179, 'neu': 0.496, 'pos': 0.325, 'compound': 0.9244}\nSentiment Score (lemmatization):     {'neg': 0.244, 'neu': 0.307, 'pos': 0.449, 'compound': 0.9517}\n"
+     "text": "track                  : Creep\nartist(s)              : Radiohead\ntrack id               : 6b2oQwSGFkzsMtQruIWm2p\nsong spotify link      : https://open.spotify.com/track/6b2oQwSGFkzsMtQruIWm2p\nartist id              : 4Z8W4fKeB5YxbusRsdQVPb\nrelease date           : 1993-02-22\nrelease date precision : day\nduration (ms)          : 238640\npopularity             : 81\nexplicit (true/false)  : True\ncover art 300x300 JFIF : https://i.scdn.co/image/ab67616d00001e022f85b65d3ac4d3d7f806ca11\ndanceability           : 0.515\nenergy                 : 0.43\nkey                    : 7\nloudness               : -9.935\nmode                   : 1\nspeechiness            : 0.0369\nacousticness           : 0.0102\ninstrumentalness       : 0.000141\nliveness               : 0.129\nvalence                : 0.104\ntempo                  : 91.841\ntime signature         : 4\nnum artist followers   : 4953452\nartist genres          : ['alternative rock', 'art rock', 'melancholia', 'oxford indie', 'permanent wave', 'rock']\nartist popularity      : 81\nartist spotify avatar  : https://i.scdn.co/image/563754af10b3d9f9f62a3458e699f58c4a02870f\nartist spotify link    : https://open.spotify.com/artist/4Z8W4fKeB5YxbusRsdQVPb\nSearching for \"Creep\" by Radiohead...\nDone.\nLyrics found. All features retrieved in 3.81 seconds\n\n[Verse 1]\nWhen you were here before\nCouldn't look you in the eye\nYou're just like an angel\nYour skin makes me cry\nYou float like a feather\nIn a beautiful world\nI wish I was special\nYou're so fuckin' special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Verse 2]\nI don't care if it hurts\nI wanna have control\nI want a perfect body\nI want a perfect soul\nI want you to notice\nWhen I'm not around\nYou're so fuckin' special\nI wish I was special\n\n[Chorus]\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\n\n[Bridge]\nShe's running out the door\nShe's running out\nShe run, run, run, run\nRun\n\n[Outro]\nWhatever makes you happy\nWhatever you want\nYou're so fuckin' special\nI wish I was special\nBut I'm a creep\nI'm a weirdo\nWhat the hell am I doing here?\nI don't belong here\nI don't belong here \n\nSentiment Score (baseline):          {'neg': 0.157, 'neu': 0.591, 'pos': 0.253, 'compound': 0.9187}\nSentiment Score (simple processing): {'neg': 0.196, 'neu': 0.435, 'pos': 0.369, 'compound': 0.9563}\nSentiment Score (stemming):          {'neg': 0.179, 'neu': 0.496, 'pos': 0.325, 'compound': 0.9244}\nSentiment Score (lemmatization):     {'neg': 0.244, 'neu': 0.307, 'pos': 0.449, 'compound': 0.9517}\n"
     }
    ],
    "source": [
@@ -285,6 +285,33 @@
    ],
    "source": [
     "processed_score(), stemmed_score(), lemma_score()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = lemma_score()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.244"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores['neg']"
    ]
   },
   {
