--- a/exploratory_notebooks/feature_extraction_rob.ipynb
+++ b/exploratory_notebooks/feature_extraction_rob.ipynb
@@ -22,8 +22,8 @@
     "\n",
     "\n",
     "#   Spotify API user credentials, generate token\n",
-    "CLIENT_ID = \"",
-    "CLIENT_SECRET = \"n",
+    "CLIENT_ID = \"\n",
+    "CLIENT_SECRET = \"n\n",
     "credentials = SpotifyClientCredentials(\n",
     "        client_id=CLIENT_ID,\n",
     "        client_secret=CLIENT_SECRET)\n",
